--- a/public/style.css
+++ b/public/style.css
@@ -2,11 +2,16 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
+}
+body, input, textarea, select, table, button, code {
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, "Apple SD Gothic Neo", Arial, "Malgun Gothic", "맑은 고딕", Dotum, 돋움, sans-serif;
 }
 
 html, input {
@@ -24,6 +29,8 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background: #000;
+  font-size: 16px;
 }
 
 ul {
@@ -32,67 +39,54 @@ ul {
 }
 
 /* Pages */
-
-.pages {
-  height: 100%;
-  margin: 0;
+.video-wrap {
+  height: 100vh;
+  max-width: 640px;
+  margin: 0 auto;
   padding: 0;
+  position: relative;
+}
+
+.send-message {
+  position: absolute;
+  bottom: 0;
   width: 100%;
+  height: 35px;
+}
+.send-message input {
+  max-width: 100%;
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  border: 0;
+  position: absolute;
+  left: 0;
+  border-top: 1px solid #ddd;
+}
+.send-message button {
+  max-width: 20%;
+  background: #000;
+  border: none;
+  padding: 11px 10px;
+  color: #fff;
+  position: absolute;
+  right: 0;
 }
 
 .page {
-  height: 100%;
-  position: absolute;
-  width: 100%;
-}
-
-/* Login Page */
-
-.login.page {
+  height: 100vh;
   background-color: #000;
 }
 
-.login.page .form {
-  height: 100px;
-  margin-top: -100px;
-  position: absolute;
-
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-
-.login.page .form .usernameInput {
-  background-color: transparent;
-  border: none;
-  border-bottom: 2px solid #fff;
-  outline: none;
-  padding-bottom: 15px;
-  text-align: center;
-  width: 400px;
-}
-
-.login.page .title {
-  font-size: 200%;
-}
-
-.login.page .usernameInput {
-  font-size: 200%;
-  letter-spacing: 3px;
-}
-
-.login.page .title, .login.page .usernameInput {
-  color: #fff;
-  font-weight: 100;
+.hide {
+  display: none !important;
 }
 
 /* Chat page */
-
 .chat.page {
-  display: none;
+  max-width: 640px;
+  margin: 0 auto;
 }
-
-/* Font */
 
 .messages {
   font-size: 150%;
@@ -110,10 +104,10 @@ ul {
 }
 
 /* Messages */
-
 .chatArea {
   height: 100%;
   padding-bottom: 60px;
+  background: #fff
 }
 
 .messages {
@@ -136,15 +130,15 @@ ul {
 
 /* Input */
 .inputMessage {
-  border: 10px solid #000;
-  bottom: 0;
-  height: 60px;
-  left: 0;
-  outline: none;
-  padding-left: 10px;
-  position: absolute;
-  right: 0;
-  width: 100%;
+  /*border: 10px solid #000;*/
+  /*bottom: 0;*/
+  /*height: 60px;*/
+  /*left: 0;*/
+  /*outline: none;*/
+  /*padding-left: 10px;*/
+  /*position: absolute;*/
+  /*right: 0;*/
+  /*width: 100%;*/
 }
 
 @keyframes fadeout {
